--- a/latex/Thesis/prelude.tex
+++ b/latex/Thesis/prelude.tex
@@ -72,14 +72,14 @@ construction which is different from previous \SHA{} standards.
 winner of the \SHA-3 contest. The techniques such as computing partial
 solutions,  linearization etc. are used for the cryptanalysis of
 round-reduced \KECCAK{}. These techniques are very effective for
-mounting preimage attacks on 2 to 3 rounds of round-reduced \KECCAK{}. 
+mounting preimage attacks on $2$ to $3$ rounds of round-reduced \KECCAK{}. 
 
 The main contribution of the thesis is a cryptanalysis of round reduced
 \KECCAK{}$[r:=800-384, c:=384]$ for $2$ rounds. The best-known preimage
 attack for this variant of \KECCAK{} has the time complexity of
  $O(2^{64})$. We propose a preimage attack with an improved time and
 space complexity of $O(2^{44})$. We further analyze the linear structure
-technique provided by Guo \etal and suggested preimage attacks for 3 rounds of \KECCAK-$256$ and 4 rounds of \KECCAK-$224$.
+technique provided by Guo \etal and suggested preimage attacks for $3$ rounds of \KECCAK-$256$ and $4$ rounds of \KECCAK-$224$.
 \end{abstract}
 
 %--------------------------------------------------------------------%
